<resources>
    <string name="app_name">لرزه افزار</string>
    <string name="main_title">لرزه افزار</string>
    <string name="main_navigation_menu_vibraation">لرزه نگار</string>
    <string name="main_navigation_menu_Sensor">تنظیمات حسگر</string>
    <string name="main_navigation_menu_aboutus">درباره ما</string>
    <string name="main_navigation_menu_contactus">ارتباط با ما</string>
    <string name="main_navigation_menu_exit">خروج</string>
    <string name="aboutGilasak"><![CDATA[ <body> <h3>درباره گیلاسک</h3> <p> گیلاسک به منظور توسعه اپلیکشن های اندرویدی مختص فارسی زبانان در تاریخ 1395/04/30 راه اندازی گردید. گیلاسک در راستای رفع نیاز مخاطبان از هیچ تلاشی فروگذار نبوده و مصمم است با پشتیبانی مطلوب و ارائه بروزرسانی های متناوب در جهت جلب رضایت مخاطبان قدم بردارد. </p> <h3>توسعه دهنده</h3> <p> <b>فرزاد سیفی</b> متولد سال 1365 و فارغ التحصیل مهندسی کامپیوتر گرایش نرم افزار فعالیت خود را در سال 1382 با طراحی و توسعه محیط های تحت وب آغاز نمود.<br/> مسلط به زبانهای برنامه نویسی<br/> C, C++, C#<br/> Java<br/> ASP, ASP.NET<br/> PHP<br/> همچنین مسلط بر<br/> Android<br/> SQL<br/> Ajax<br/> JQuery<br/> JavaScript, VBScript<br/> CSS, HTML </p> </body>]]> </string>
    <string name="contactGilasakTitle">راههای ارتباطی با گیلاسک</string>
    <string name="contactGilasakSiteContent">http://Gilasak.com</string>
    <string name="contactGilasakTelegramTitle">کانال تلگرام</string>
    <string name="contactGilasakEmailTitle">پست الکترونیک</string>
    <string name="contactGilasakEmailContent">SUPPORT@Gilasak.com</string>
    <string name="contactGilasakTelTitle">شماره همراه</string>
    <string name="contactGilasakSiteTitle">سایت گیلاسک</string>
    <string name="contactGilasakTelegramcontent">telegram.me/GilasakSoft</string>
    <string name="contactGilasakTelContent">+989123151663</string>
    <string name="contactGilasakDeveloperTitle">توسعه دهنده</string>
    <string name="contactGilasakDeveloperContent">فرزاد سیفی</string>

    <string name="menuListGraphTitle">لرزه نگار</string>
    <string name="menuListCompareTitle">مقایسه</string>
    <string name="menuListReviewTitle">بررسی مجدد</string>
    <string name="menuListMobilePCTitle">ارتباط با سایر دستگاه ها</string>
    <string name="graphViewCompleteNavigationTitle">تنظیمات</string>
    <string name="graphViewCompleteNavigationMenuX">X-Axis</string>
    <string name="graphViewCompleteNavigationMenuY">Y-Axis</string>
    <string name="graphViewCompleteNavigationMenuZ">Z-Axis</string>
    <string name="graphViewCompleteNavigationMenuBar">Shock-Axis</string>
    <string name="graphViewCompleteNavigationMenuLegend">Legend</string>
    <string name="graphViewCompleteStartSamplingButton">شروع</string>
    <string name="graphViewCompleteStopSamplingButton">پایان</string>
    <string name="graphViewCompleteResetButton">از نو</string>
    <string name="graphViewCompleteSaveButton">ذخیره</string>
    <string name="graphViewCompleteLoadButton">بارگذاری</string>
    <string name="dialogSaveFileTitle">ذخیره سازی</string>
    <string name="dialogSaveFileHint">نام مورد نظر را وارد نمایید</string>
    <string name="dialogSaveFileCancel">لغو</string>
    <string name="dialogSAveFileSave">ذخیره</string>
    <string name="dialogSAveFileErrorFileNameEmpty">نامی برای فایل انتخاب نشده است</string>
    <string name="dialogSAveFileErrorFileNameDuplicate">نام فایل تکراری است</string>
    <string name="dialogSAveFileErrorNotEnoughSpace">فضای کافی برای ذخیره فایل موجود نیست</string>
    <string name="dialogSAveFileErrorGeneralError">خطا در هنگام ذخیره فایل</string>
    <string name="dialogSAveFileMessageSAveOK">ذخیره سازی با موفقیت انجام شد</string>
    <string name="dialogLoadFileEmpty">فایلی برای نمایش موجود نمی باشد</string>
    <string name="dialogLoadFileCancel">بازگشت</string>
    <string name="dialogSaveFileAccept">تأیید</string>
    <string name="dialogLoadFileTitle">بارگزاری</string>
    <string name="dialogLoadFileOk">بارگزاری با موفقیت انجام شد</string>
    <string name="dialogLoadFileGeneralError">خطا در بارگزاری</string>
    <string name="dialogDeleteFileText">آیا برای حذف فایل اطمینان دارید؟</string>
    <string name="dialogDeleteFileTitle">حذف فایل</string>
    <string name="dialogDeleteFileDelete">حذف</string>
    <string name="dialogDeleteFileCancel">لغو</string>
    <string name="dialogDeleteFileNameText">"نام فایل : "</string>
    <string name="DialogDeleteFileMessageOK">حذف فایل با موفقیت انجام شد</string>
    <string name="DialogDeleteFileGeneralError">خطا در حذف فایل</string>
    <string name="compareReadyForSampling">آماده نمونه برداری</string>
    <string name="startString">شروع</string>
    <string name="graphCompareMainStartTime">زمان مقایسه بر حسب ثانیه</string>
    <string name="graphCompareMainStartVibration">حذف لرزش ها تا مقدار</string>
    <string name="graphCompareMainDefaultTimeValue">6</string>
    <string name="graphCompareMainDefaultVibrationValue">0.025</string>
    <string name="samplingStartText">شروع نمونه برداری &#8230;</string>
    <string name="samplingEndText">پایان نمونه برداری</string>
    <string name="menuConnectionAndroidBeacon">ارتباط با دستگاه اندرویدی بعنوان فرستنده</string>
    <string name="menuConnectionAndroidReceiver">ارتباط با دستگاه اندرویدی بعنوان گیرنده</string>
    <string name="MenuConnectionPCBeacon">ارتباط با رایانه بعنوان فرستنده</string>
    <string name="menuConnectionUpdateInformerText">این قسمت در بروزرسانی های آتی در برنامه گنجانده خواهد شد.</string>
    <string name="menuConnectionUpdateInformerButton">قبول</string>
    <string name="updateTitle">بروزرسانی...</string>
    <string name="updateText">نسخه جدیدی از برنامه موجود می باشد. آیا مایل به بروزرسانی می باشید؟</string>
    <string name="updateYes">بلی</string>
    <string name="updateNo">خیر</string>
    <string name="accSensorUnitTitle">مقیاس نمونه برداری</string>
    <string name="accSensorSensivityTitle">سرعت نمونه برداری حسگر</string>
    <string name="accSensorSensivityScale">نمونه در ثانیه</string>
    <string name="accSensorSensivityDefaultValue">---</string>
    <string name="accSensorSensivityButtonText">محاسبه</string>
    <string name="accSensorSensivityButtonCalculation">در حال محاسبه &#8230;</string>
    <string name="accSensorAvailble">گوشی هوشمند شما دارای حسگر شتاب سنج می باشد</string>
    <string name="accSensorNotAvailble">متاسفانه گوشی هوشمند شما دارای حسگر شتاب سنج نمی باشد</string>
    <string name="accSensorUnitMS2">Meter Per Second Squared</string>
    <string name="accSensorUnitGal">Gal - Galileo</string>
    <string name="accSensorUnitFTS2">Feet Per Second Squared</string>
    <string name="accSensorUnitStandardGravity">Standard Gravity</string>
    <string name="accSensorSettingChange">ثبت تغییرات</string>
</resources>
