<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/dialogSaveFileMinWidth"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialogDeleteTitleRed"
        android:gravity="center"
        android:padding="@dimen/dialogSaveFileLinearPadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialogDeleteFileTitle"
            android:textColor="@color/colorBackGroundWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dialogSaveFileLinearPadding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/dialogDeleteGraphFileTextView"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialogDeleteFileNameText"
                android:textSize="18sp"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialogDeleteFileText"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dialogSaveFileLinearPadding">

        <Button
            android:id="@+id/dialogDeleteCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialogDeleteFileCancel"
            android:textStyle="bold"
            android:background="@color/grayButton"
            android:layout_marginRight="@dimen/buttonsMargin"/>

        <Button
            android:id="@+id/dialogDeleteDeleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialogDeleteFileDelete"
            android:textStyle="bold"
            android:textColor="@color/colorBackGroundWhite"
            android:background="@color/dialogDeleteTitleRed"
            android:layout_marginLeft="@dimen/buttonsMargin"/>

    </LinearLayout>

</LinearLayout>