<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="@dimen/dialogSaveFileLinearPadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialogLoadFileTitle"
            android:textColor="@color/colorBackGroundWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/activity_vertical_margin">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dialogLoadFileRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:scrollbars="vertical"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textViewLoadFileEmpty"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dialogDeleteTitleRed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:text="@string/dialogLoadFileEmpty"
            android:visibility="gone"
            android:gravity="center"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dialogSaveFileLinearPadding">

        <Button
            android:id="@+id/dialogLoadCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialogLoadFileCancel"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>